[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flow-visualizer"
version = "0.1.0"
description = "A Streamlit application for hydrological analysis and visualization"
authors = ["pnsinha@uchicago.edu"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.88.0"
pysheds = "^0.2.7"
matplotlib = "^3.4.3"
rasterio = "^1.2.6"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
