[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flow-visualizer"
version = "0.1.0"
description = "A Streamlit application for hydrological analysis and visualization"
authors = ["John Smith <john@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.21.0"
pysheds = "^0.3.5"
matplotlib = "^3.8.4"
rasterio = "^1.3.9"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
